@@ -4,6 +4,7 @@ ovirt-host-deploy -- oVirt host deploy
 
  * vdsm: bridge: fix vlan id detection, thanks to Jeff Bailey for reporting.
  * vdsm: hardware: do not fail if cannot read msr, rhbz#916589.
+ * gluster: packages: start glusterd if no reboot.
 
 2013-02-14 - Version 1.0.0
 
